--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,4 +3,16 @@
     justify-content: space-between;
     padding: 0 0.5rem;
     background-color: var(--color-default);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+    box-shadow: 0px 1px 5px var(--color-oposity-color);
+}
+.content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-default);
+    margin-top: 18rem;
 }
