Adicionado funcionalidades de Ver Mais e Ver Menos no About e texturas no BG

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,15 +1,69 @@
 .about{
     padding: 5rem 0;
+    margin-top: 2rem;
     color: var(--color-oposity-color);
+    position: relative;
 }
+.shape1{
+    /* border: 1px solid red; */
+    width: 314px;
+    height: 120px;
+    position: absolute;
+    top: 0;
+    transform: scaleY(-1);
+    opacity: .8;
+    z-index: 0;
+}
+.shape2{
+    width: 314px;
+    height: 120px;
+    position: absolute;
+    bottom: 0;
+    transform: scaleX(-1);
+    opacity: .8;
+    z-index: 0;
+}
+.triangle1{
+    width: 100%;
+    height: 100%;
+    background-color: #11a11c;
+    clip-path: polygon(0 0, 0% 100%, 100% 100%);
+    position: absolute;
+}
+.triangle2{
+    width: 100%;
+    height: 100%;
+    background-color: #11a81c;
+    clip-path: polygon(0 0, 0% 100%, 80% 100%);
+    position: absolute;
+}
+.triangle3{
+    width: 100%;
+    height: 100%;
+    background-color: #11b21c;
+    clip-path: polygon(0 0, 0% 100%, 60% 100%);
+    position: absolute;
+}
+
 .who, .professional{
     display: flex;
     flex-direction: column;
-    gap: var(--size-title);
-    width: 100%;
-    height: 15.5rem;
     padding: var(--size-subtext);
     position: relative;
+    margin: 0 1rem;
+    border-radius: 10px;
+    background-color: var(--color-emph);
+    box-shadow: -2px 2px 5px var(--color-shadow);
+    z-index: 1;
+}
+.show{
+    height: auto;
+    animation: show;
+    animation-duration: 2s;
+}
+.hide{
+    animation: hide;
+    animation-duration: .5s;
 }
 .who h2, 
 .professional h2{
@@ -22,7 +76,7 @@
 .professional h2{
     text-align: left;
     margin-left: 0rem;
-    margin-right: 2.5rem;
+    margin-right: 1rem;
     border-left: none;
     border-right: 5px solid var(--color-secondary);
 }
@@ -30,7 +84,23 @@
     font-family: var(--font-text);
     font-size: var(--size-text);
     text-align: justify;
-    font-weight: bold;
+    position: relative;
+}
+.hide p{
+    margin-top: 1.8rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+}
+.show p{
+    margin-top: 1.8rem;
+    display: block;
+    overflow: auto;
+    text-overflow: ellipsis;
+    word-wrap: normal;
 }
 .phrase h4{
     margin: 2.5rem auto;
@@ -38,41 +108,35 @@
     text-align: center;
     color: var(--color-secondary);
 }
-.who p, .professional p{
-    height: 9rem;
-    overflow: hidden;
-}
-.professional p{
-    margin-bottom: .2rem;
-}
-.layerFadeWho{
-    height: 14.5rem;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-shadow: 0px -20px 10px 5px var(--color-default) inset;
+span.more{
+    width: fit-content;
+    margin: .5rem 0;
+    margin-left: auto;
+    position: relative; 
+    cursor: pointer;
+    font-family: var(--font-text);
+    color: var(--color-secondary);
 
 }
-.who button, .professional button{
-    position: absolute; 
-    border: none;
-    cursor: pointer;
-    bottom: 0;
-    right: var(--size-subtext);
-    font-size: var(--size-text);
-    padding: 0;
-    background-color: transparent;
-    box-shadow: none;
-    color: var(--color-secondary);
-}
-.who button:active, .professional button:active{
-    box-shadow: none;
-    border: none;
-    margin-right: 0rem;
-    margin-top: 0rem;
-    background-color: transparent;
+span.more:hover{
     color: var(--color-primary);
-    border-bottom: none;
-    border-left: none;
 }
+span.more:active{
+    color: var(--color-primary);
+}
+
+@keyframes show {
+    0%{
+        opacity: 0;
+    }100%{
+        opacity: 1;
+    }
+}
+@keyframes hide {
+    0%{
+        opacity: 0;
+    }100%{
+        opacity: 1;
+    }
+}
+
