--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,8 +6,8 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1;
-    box-shadow: 0px 1px 5px var(--color-oposity-color);
+    z-index: 2;
+    box-shadow: 0px 1px 5px var(--color-shadow);
 }
 .content{
     width: 100%;
