Adicionado Cards para Projetos

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,5 +14,5 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-default);
-    margin-top: 18rem;
+    position: relative;
 }
