--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --font-text: 'Inter', sans-serif;;
 
   --size-title: 1.8rem;
+  --size-titleText: 1.3rem;
   --size-text: 1rem;
   --size-subtext: .8rem;
 }
