--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,13 +1,11 @@
 .about{
     padding: 5rem 0;
-    margin-top: 2rem;
     color: var(--color-oposity-color);
     position: relative;
 }
 .shape1{
-    /* border: 1px solid red; */
-    width: 314px;
-    height: 120px;
+    width: 100%;
+    height: 13%;
     position: absolute;
     top: 0;
     transform: scaleY(-1);
@@ -15,10 +13,11 @@
     z-index: 0;
 }
 .shape2{
-    width: 314px;
-    height: 120px;
+    width: 100%;
+    height: 13%;
     position: absolute;
     bottom: 0;
+    right: 0;
     transform: scaleX(-1);
     opacity: .8;
     z-index: 0;
@@ -48,7 +47,7 @@
 .who, .professional{
     display: flex;
     flex-direction: column;
-    padding: var(--size-subtext);
+    padding: var(--size-text);
     position: relative;
     margin: 0 1rem;
     border-radius: 10px;
@@ -67,16 +66,20 @@
 }
 .who h2, 
 .professional h2{
+    width: 15.5rem;
+    padding: .8rem 0;
     font-family: var(--font-title);
-    font-size: var(--size-title);
-    margin-left: 2.5rem;
+    font-size: var(--size-titleText);
+    margin-left: auto;
     border-left: 5px solid var(--color-secondary);
     text-align: end;
 }
 .professional h2{
+    width: 14.5rem;
+    padding: 0;
     text-align: left;
-    margin-left: 0rem;
-    margin-right: 1rem;
+    margin-left: 0;
+    margin-right: auto;
     border-left: none;
     border-right: 5px solid var(--color-secondary);
 }
@@ -116,12 +119,9 @@ span.more{
     cursor: pointer;
     font-family: var(--font-text);
     color: var(--color-secondary);
-
+    -webkit-tap-highlight-color: transparent;
 }
-span.more:hover{
-    color: var(--color-primary);
-}
-span.more:active{
+span.more:hover, span.more:active{
     color: var(--color-primary);
 }
 
