--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -2,26 +2,24 @@
     width: 100%;
     height: 320px;
     background-color: var(--color-default);
-    position: absolute;
-    top: 0;
+    position: relative;
 }
 .layer{
     width: 100%;
     height: 100%;
     background-image: url(../../assets/bg.jpg);
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
     position: absolute;
 }
 .light{
-    height: 320px;
+    height: 100%;
     backdrop-filter: blur(5px);
     animation-name: transicaoLight;
     animation-duration: 1s;
 }
 .dark{
-    height: 320px;
+    height: 100%;
     backdrop-filter: invert(1) blur(5px);    
     animation-name: transicaoDark;
     animation-duration: 300ms;
@@ -29,7 +27,7 @@
 .intro{
     position: absolute;
     width: 100%;
-    height: 320px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
