--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -72,17 +72,36 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  margin: 0 1rem;
+  padding: .5rem 0;
+  border-radius: 10px;
+  background-color: var(--color-emph);
+  box-shadow: -2px 2px 5px var(--color-shadow);
 }
 .content form label {
   width: 16rem;
   display: flex;
   flex-direction: column;
+  height: 5rem;
+}
+.content form label:nth-of-type(3) {
+  width: 16rem;
+  display: flex;
+  flex-direction: column;
+  height: 14rem;
 }
 .content form label span {
   font-family: var(--font-subtitle);
   font-size: var(--size-text);
   color: var(--color-secondary);
   width: fit-content;
+}
+.content form label p {
+  font-family: var(--font-text);
+  font-size: var(--size-subtext);
+  color: var(--color-cancel);
+  width: fit-content;
+  margin-top: 0.2rem;
 }
 .content form label input,
 .contact form label textarea {
@@ -93,6 +112,7 @@
   padding: 0.5rem;
   outline: none;
   border: none;
+  border-bottom: 1px solid var(--color-shadow);
   border-radius: 5px;
   box-shadow: -2px 2px 5px var(--color-shadow);
 }
@@ -110,9 +130,18 @@
   border-radius: 5px;
   border: 1px solid var(--color-emph);
 }
-.form button{
+.contact form .button{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 2rem;
+}
+.contact form .button button{
     position: absolute;
-    bottom: 0;
+}
+.contact form .button button:active{
+  margin-right: .3rem;
+  margin-top: .2rem;
 }
 
 .celEmail{
@@ -141,4 +170,24 @@
 }
 .celEmail ul li a i:hover{
     text-shadow: -2px 2px 5px var(--color-secondary);
+}
+
+.errorShow{
+  display: block;
+  animation: show 500ms ease-in-out;
+}
+.errorHide{
+  display: none;
+}
+
+@keyframes show {
+  0%{
+    display: none;
+    transform: translateY(-10px);
+    opacity: 0;
+  }100%{
+    display: block;
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
