--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-secondary: #49A827;
   --color-tertiary: #285C15;
   --color-quaternary: #94E177;
+  --color-cancel: #e40f0f;
 
   --color-default: #E1E1E1;
   --color-emph: #ebebeb;
