--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,7 +1,7 @@
 .home{
     width: 100%;
     height: 320px;
-    background-color: var(--color-default);
+    background-color: rgb(var(--color-default));
     position: relative;
 }
 .layer{
@@ -49,7 +49,7 @@
     text-align: center;
     font-family: var(--font-subtitle);
     font-size: var(--size-title);
-    color: var(--color-default);
+    color: rgb(var(--color-default));
 }
 .intro p:nth-of-type(2){
     font-size: var(--size-description);
