--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -5,7 +5,7 @@
 }
 .shape1 {
   width: 100%;
-  height: 13%;
+  height: 7rem;
   position: absolute;
   top: 0;
   transform: scaleY(-1);
@@ -14,7 +14,7 @@
 }
 .shape2 {
   width: 100%;
-  height: 13%;
+  height: 7rem;
   position: absolute;
   bottom: 0;
   transform: scaleX(-1);
@@ -76,7 +76,7 @@
   padding: 0.5rem 0;
   border-radius: 10px;
   background-color: var(--color-emph);
-  box-shadow: -2px 2px 5px var(--color-shadow);
+  box-shadow: -4px 4px 10px var(--color-shadow);
 }
 .content form label {
   width: 16rem;
@@ -114,7 +114,7 @@
   border: none;
   border-bottom: 1px solid var(--color-shadow);
   border-radius: 5px;
-  box-shadow: -2px 2px 5px var(--color-shadow);
+  box-shadow: -4px 4px 10px var(--color-shadow);
 }
 .contact form label textarea {
   resize: none;
@@ -167,10 +167,11 @@
   font-style: normal;
   font-size: var(--size-titleText);
   color: var(--color-oposity-color);
-  transition: 300ms ease-in-out;
+  transition: 100ms ease-in-out;
 }
 .celEmail ul li a i:hover {
-  text-shadow: -2px 2px 5px var(--color-secondary);
+  color: var(--color-secondary);
+  text-shadow: -4px 4px 10px var(--color-shadow);
 }
 
 .errorShow {
