--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -14,7 +14,7 @@
     justify-content: space-around;
     width: 14rem;
     background-color: var(--color-emph);
-    box-shadow: -2px 2px 5px var(--color-shadow);
+    box-shadow: -4px 4px 10px var(--color-shadow);
     padding: .5rem .5rem .3rem;
     border-radius: 8px;
 }
@@ -39,9 +39,6 @@
     border-radius: 25px;
     transition: 300ms ease-in-out;
 }
-.icons ul li a i:hover{
-    color: rgb(var(--color-default));
-}
 .icons ul li:nth-child(1) a i:hover{
     filter: drop-shadow(0px 0px 3px var(--color-oposity-color));
 }
@@ -63,8 +60,8 @@
     justify-content: center;
 }
 .createdBy p{
-    background-color: rgb(var(--color-default));
-    box-shadow: -2px 2px 5px var(--color-shadow);
+    background-color: var(--color-emph);
+    box-shadow: -4px 4px 10px var(--color-shadow);
     width: fit-content;
     padding: .3rem .5rem;
     margin: 0.5rem;
