--- a/src/index.css
+++ b/src/index.css
@@ -1,62 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&family=Orbitron&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&family=Orbitron&display=swap");
 
-:root{
-  --color-primary: #5FDB33;
-  --color-secondary: #49A827;
-  --color-tertiary: #285C15;
-  --color-quaternary: #94E177;
+:root {
+  --color-primary: #5fdb33;
+  --color-secondary: #49a827;
+  --color-tertiary: #285c15;
+  --color-quaternary: #94e177;
   --color-cancel: #e40f0f;
 
   --color-default: 225, 225, 225;
   --color-emph: #ebebeb;
-  --color-oposity-color: #1C1C1C;
+  --color-oposity-color: #1c1c1c;
   --color-black: #1c1c1c;
-  --color-shadow: #aaa;
+  --color-shadow: rgba(170, 170, 170, 0.5);
+  --color-shadow-green: 73, 168, 39;
 
-  --font-title: 'Orbitron', sans-serif;
-  --font-subtitle: 'Bebas Neue', sans-serif;
-  --font-text: 'Inter', sans-serif;;
+  --font-title: "Orbitron", sans-serif;
+  --font-subtitle: "Bebas Neue", sans-serif;
+  --font-text: "Inter", sans-serif;
 
   --size-title: 1.8rem;
   --size-titleText: 1.3rem;
   --size-text: 1rem;
-  --size-subtext: .8rem;
+  --size-subtext: 0.8rem;
 }
 
-[className='dark']{
+[className="dark"] {
   --color-default: 28, 28, 28;
   --color-emph: #161616;
   --color-oposity-color: #efefef;
   --color-black: #1c1c1c;
-  --color-shadow: #3d3d3d;
-  
-  --color-primary: #49A827;
-  --color-secondary: #5FDB33;
-  --color-tertiary: #285C15;
-  --color-quaternary: #49A827;
+  --color-shadow: rgba(61, 61, 61, 0.5);
+  --color-shadow-green: 95, 219, 51;
+
+  --color-primary: #49a827;
+  --color-secondary: #5fdb33;
+  --color-tertiary: #285c15;
+  --color-quaternary: #49a827;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   transition: ease-in-out 100ms;
 }
-body{
+body {
   overflow-y: auto;
   scroll-behavior: smooth;
 }
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 6px;
   background: var(--color-emph);
 }
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: var(--color-secondary);
   border-radius: 5px;
   border: 1px solid var(--color-emph);
 }
 
-button{
+button {
   font-family: var(--font-subtitle);
   font-size: var(--size-text);
   color: var(--color-oposity-color);
@@ -71,18 +73,58 @@ button{
   transition: 50ms ease-in-out;
   -webkit-tap-highlight-color: transparent;
 }
-button:hover{
-  background-color: rgba(73, 168, 39, .9);
-  border-top: 1px solid rgba(73, 168, 39, .9);
-  border-right: 1px solid rgba(73, 168, 39, .9);
+button:hover {
+  background-color: rgba(73, 168, 39, 0.9);
+  border-top: 1px solid rgba(73, 168, 39, 0.9);
+  border-right: 1px solid rgba(73, 168, 39, 0.9);
 }
-button:active{
+button:active {
   box-shadow: none;
   border: none;
-  margin-right: .3rem;
-  margin-top: .4rem;
+  margin-right: 0.3rem;
+  margin-top: 0.4rem;
   background-color: var(--color-secondary);
   border-bottom: 1px solid var(--color-tertiary);
   border-left: 1px solid var(--color-tertiary);
 }
 
+span.swiper-pagination-bullet {
+  background-color: var(--color-secondary);
+}
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  color: var(--color-secondary);
+}
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  color: var(--color-secondary);
+  display: flex;
+}
+.swiper-button-next::after {
+  position: absolute;
+  left: 15px;
+  font-size: 1.5rem;
+}
+.swiper-button-prev::after {
+  position: absolute;
+  font-size: 1.5rem;
+  right: 15px;
+}
+.swiper-button-disabled {
+  display: none;
+  animation-name: transitionToDisabled;
+  animation-duration: 150ms;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes transitionToDisabled {
+  0% {
+    opacity: 1;
+    display: flex;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
