--- a/src/components/DarkMode/DarkMode.module.css
+++ b/src/components/DarkMode/DarkMode.module.css
@@ -6,6 +6,7 @@
     position: absolute;
     margin-left: -9999px;
     visibility: hidden;
+    -webkit-tap-highlight-color: transparent;
 }
 .switch + label{
     display: block;
@@ -13,6 +14,7 @@
     cursor: pointer;
     outline: none;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 .switch + label{
     padding: 2px;
