--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,6 +15,8 @@
 }
 .menuLogo i{
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    padding: .4rem;
 }
 .menuLogo button{
     border: none;
