--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -68,12 +68,13 @@
 }
 
 .content form {
+  width: 18.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  margin: 0 1rem;
-  padding: 0.5rem 0;
+  margin: 0 auto;
+  padding: 1.5rem 1rem;
   border-radius: 10px;
   background-color: var(--color-emph);
   box-shadow: -4px 4px 10px var(--color-shadow);
